<package>
  <name>cnrg_tb3_simulations</name>
  <version>0.0.0</version>
  <description>metapackage of cnrg_tb3_simulation</description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tb3_description</run_depend>
  <run_depend>tb3_gazebo</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
