<?xml version="1.0"?>
<package format="2">
  <name>tb3_gazebo</name>
  <version>0.0.0</version>
  <description>The sub-package of cnrg_tb3_simulations </description>
  <maintainer email="q253upng@gmail.com">SHTseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <gazebo_ros 
        plugin_path="${prefix}/lib"
        gazebo_media_path="${prefix}"
        gazebo_model_path="${prefix}/models"/>
  </export>
  
</package>
